--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+:root {
+  --nav-bar-height: 100px;
+}
+
+body {
+  min-height: 100vh;
+  background-color: #0f0f0f;
+  color: #f0f0f0;
+}
